fix: controls size jump rtl

--- a/views/js/pciCreator/dev/audioRecordingInteraction/runtime/scss/audioRecordingInteraction.scss
+++ b/views/js/pciCreator/dev/audioRecordingInteraction/runtime/scss/audioRecordingInteraction.scss
@@ -164,6 +164,9 @@ $modalShadowColor: #666666;
       svg {
         width: 16px;
         height: 16px;
+        @include rtl {
+          margin: 0.06em 0.02em;
+        }
       }
     }
 
